# flower-addon

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  generate_certs.py  go.mod  go.sum  pyproject.toml
charts/flower-addon/: values.yaml
charts/flower-addon/templates/: addon-deployment-config.yaml  addon-template.yaml  cluster-management-addon.yaml  superlink.yaml
cifar10/: client_app.py  server_app.py
cifar10/deploy/: kustomization.yaml  superexec-clientapp.yaml  superexec-serverapp.yaml
cmd/manager/: main.go
deploy/addon/: addon-deployment-config.yaml  addon-template.yaml  clustermanagementaddon.yaml  kustomization.yaml  placement.yaml
deploy/addon-template/: addon-deployment-config.yaml
deploy/addon/auto-install/all-clusters/: clustermanagementaddon-patch.yaml  kustomization.yaml  managedclustersetbinding.yaml  (+1 more)
deploy/addon/install/: kustomization.yaml
deploy/superlink/: Dockerfile  deployment.yaml  kustomization.yaml  service.yaml
deploy/supernode/: Dockerfile  clustermanagementaddon.yaml  kustomization.yaml
docker/: Dockerfile.superexec  compose.yml
docs/: auto-install-by-placement.md  install-flower-addon.md  proposal-flower-ocm-integration.md  run-federated-app.md
examples/cluster1/: addondeploymentconfig.yaml  managedclusteraddon.yaml
examples/cluster2/: addondeploymentconfig.yaml
flowerexample/: client_app.py  server_app.py  task.py
k8s/: kustomization.yaml  namespace.yaml
k8s/superexec/: clientapp-deployments.yaml  serverapp-deployment.yaml
k8s/superlink/: deployment.yaml  service.yaml
k8s/supernode/: deployment-1.yaml  deployment-2.yaml  service.yaml
manifests/hub/: addon-deployment-config.yaml  ca-secret-job.yaml  clustermanagementaddon.yaml  namespace.yaml  superlink-deployment.yaml  superlink-service.yaml
manifests/manager/: deployment.yaml
numpy_fl/: __init__.py  client_app.py  server_app.py  task.py
pkg/addon/: addon.go  registration.go  values.go
scripts/: deploy-k8s.sh  generate-certs.sh  start_superlink.sh  start_supernode_1.sh  start_supernode_2.sh
(+10 files in other folders)
