[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowerexample"
version = "1.0.0"
description = "Federated Learning with Flower - TLS Enabled"
license = "Apache-2.0"
dependencies = [
    "flwr>=1.25.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "cryptography>=42.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "flowerexample.server_app:app"
clientapp = "flowerexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.1
batch-size = 32

[tool.flwr.federations]
default = "local-deployment"

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
root-certificates = "./certificates/ca.crt"

[tool.flwr.federations.remote-deployment]
address = "cloud-vm:9093"
root-certificates = "./certificates/ca.crt"

[tool.flwr.federations.k8s-deployment]
address = "127.0.0.1:9093"
root-certificates = "./certificates/ca.crt"
