[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numpy-fl"
version = "1.0.0"
description = "Lightweight Federated Learning with NumPy (Linear Regression)"
license = "Apache-2.0"
dependencies = [
    "flwr>=1.23.0",
    "numpy>=1.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["numpy_fl"]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "numpy_fl.server_app:app"
clientapp = "numpy_fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
local-epochs = 10
learning-rate = 0.01
n-features = 10
n-samples = 100

[tool.flwr.federations]
default = "local-deployment"

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true

[tool.flwr.federations.ocm-deployment]
address = "127.0.0.1:30093"
insecure = true
